# CIF-v2

./: .gitignore  Cargo.toml  LICENSE  README.md  test_viewer.cifv2f  viewer.html
.github/workflows/: validate.yml
capture.cifv2/: inr.siren  procedural.json  receipt.json
docs/: CIF_PROJECTION_CONTRACT_v1.md
replay_tmp.cifv2/: canonical_lms.tensor  manifest.json  receipt.json
scripts/: validate.sh
src/: main.rs
src/rdo/: bench.rs  compare.rs  encode.rs  inspect.rs  mod.rs  objective.rs  render.rs  select.rs  tree_bin.rs  types.rs  verify.rs
src/rdo/encoders/: affine.rs  constant.rs  dct.rs  edge.rs  mod.rs  quadratic.rs  siren.rs  wavelet.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
