[package]
name = "cifv2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CIF v2 deterministic executable visual field artifact generator and verifier"

[dependencies]
anyhow = "1.0"
base85 = "2.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
